adjusted returned types in ControllerExceptionAdvice and controllers, code cleanup